Remove the float to fix the responsive layout issue

--- a/lms/static/sass/views/_track_selection.scss
+++ b/lms/static/sass/views/_track_selection.scss
@@ -20,7 +20,6 @@
         background-color: white;
         border: 1px solid #707070;
         position: relative;
-        float: right;
     }
 
     .track-selection-certificate {
